--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
     "vue": "^3.0.0",
