--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "less-loader": "^5.0.0",
     "vue": "^3.0.0",
     "vue-axios": "^3.4.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
